trunk/Archive2/45/7e31c0bc86ff25/output
main.cpp: In function 'int main()':
main.cpp:105:50: error: no matching function for call to 'CircularVector<Item>::emplace(int, int, int, int, int, int, std::vector<int>, int)'
     v.emplace(1, 0, 1, 0, 1, 0, vector<int>(), -1);
                                                  ^
main.cpp:105:50: note: candidate is:
main.cpp:21:7: note: void CircularVector<T>::emplace(Args& ...) [with Args = {int, int, int, int, int, int, std::vector<int, std::allocator<int> >, int}; T = Item]
  void emplace(Args&... args) {
       ^
main.cpp:21:7: note:   no known conversion for argument 1 from 'int' to 'int&'
